Fix so fade doesn't appear on scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -106,7 +106,7 @@
   background: linear-gradient(0deg, rgba(59,59,59,0) 0%, rgba(59,59,59,0.5) 15%, rgba(59,59,59,1) 30%, rgba(59,59,59,1) 73%);
   position: absolute;
   height: 10px;
-  width: inherit;
+  width: 230px;
   top: 165px;
 }
 
@@ -115,7 +115,7 @@
   background: linear-gradient(0deg, rgba(59,59,59,1) 27%, rgba(59,59,59,1) 70%, rgba(59,59,59,0.5) 85%, rgba(59,59,59,0) 100%);
   position: absolute;
   height: 10px;
-  width: inherit;
+  width: 230px;
   top: 565px;
 }
 
